--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="book2_name">Sach gi do, no idea</string>
     <string name="book2_author">chiu day</string>
     <string name="book2_price">123,456</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="google_client_id">860634028203-bg9pn7gq10f9vromh2tc1rknmv80ojbv.apps.googleusercontent.com</string>
 </resources>
